# cloud_billings

./: .gitignore  README.md  pyproject.toml
cloud_billings/: config.csv.sample  example.py  run_monitor.py
cloud_billings/billings/: __init__.py  alert_service.py  config_parser.py  monitor.py
cloud_billings/clouds/: aws_provider.py  huawei_provider.py  provider.py  service.py
